# mujina_ros

./: LICENSE  README.md
mujina/: CMakeLists.txt  package.xml
mujina/config/: 90-mujina.rules
mujina_control/: package.xml  setup.cfg  setup.py
mujina_control/models/: mujina.xml  policy.onnx  policy.pt  scene.xml
mujina_control/mujina_control/: mujina_main.py
mujina_control/mujina_control/interface/: robot_mode_command.py
mujina_control/mujina_control/motor_lib/: __init__.py  motor_lib.py
mujina_control/mujina_control/mujina_utils/: __init__.py  mujina_onnx.py  mujina_utils.py
mujina_control/mujina_control/mujina_utils/legged_gym_math/: __init__.py  legged_gym_math.py
mujina_control/mujina_control/mujina_utils/legged_gym_math/isaacgym_torch_utils/: __init__.py  isaacgym_torch_utils.py
mujina_control/mujina_control/mujina_utils/parameters/: parameters.py
mujina_control/scripts/: can_setup.sh  can_setup_net.sh  motor_set_zero_position.py  motor_test_enable.py  motor_test_mujina_read_only.py  motor_test_read_only.py
mujina_control/test/: test_flake8.py
mujina_description/: CMakeLists.txt  README.md  package.xml
mujina_description/launch/: config.rviz  display.launch.py  display_raw.launch.py
mujina_description/meshes/collision/: MUJINA_Body.stl  MUJINA_FL_calf.stl  MUJINA_FL_scapula.stl  MUJINA_FL_thigh.stl  MUJINA_FR_calf.stl  MUJINA_FR_scapula.stl  MUJINA_FR_thigh.stl  MUJINA_RL_scapula.stl  MUJINA_RL_thigh.stl  MUJINA_RR_calf.stl  MUJINA_RR_scapula.stl  MUJINA_RR_thigh.stl
mujina_description/meshes/visual/: MUJINA_Body.stl  MUJINA_FL_calf.stl  MUJINA_FL_scapula.stl  MUJINA_FL_thigh.stl  MUJINA_FR_calf.stl  MUJINA_FR_scapula.stl  MUJINA_FR_thigh.stl  MUJINA_RL_calf.stl  MUJINA_RL_scapula.stl  MUJINA_RL_thigh.stl  MUJINA_RR_scapula.stl  MUJINA_RR_thigh.stl
mujina_description/urdf/: mujina.urdf  mujina.urdf.xacro  mujina.xacro  mujina_pkg.xacro
mujina_msgs/: CMakeLists.txt  package.xml
mujina_msgs/msg/: MotorState.msg
rt_usb_imu_driver/: CMakeLists.txt  README.md  package.xml
rt_usb_imu_driver/include/rt_usb_imu_driver/: parser.hpp
rt_usb_imu_driver/src/: parser.cpp  rt_usb_imu_driver.cpp
