<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujina_control</name>
  <version>0.0.1</version>
  <description>MUJINA control package</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <author email="kawaharazuka@jsk.imi.i.u-tokyo.ac.jp">Kento Kawaharazuka</author>
  <author>CoRE-MA-KING</author>
  <author email="yakushigawa@rt-net.jp">chama1176</author>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can-utils</exec_depend>

  <depend>mujina_msgs</depend>
  <depend>mujina_description</depend>
  <depend>urdfdom_py</depend>
  <depend>python3-bitstring</depend>
  <depend>python3-scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
