<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujina_description</name>
  <version>1.0.0</version>
  <description>The mujina description package</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <author email="mori@rt-net.jp">Yuki Mori</author>
  <author email="yakushigawa@rt-net.jp">chama1176</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
